update link to site

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github-user: 'melkyades'
 #tumblr: 'mytumblr'
 #weibo: 'myweibo'
 #vk: 'myvk'
-blog_url: 'javierpimas.github.io'
+blog_url: 'melkyades.github.io'
 email: '315241+melkyades@users.noreply.github.com'
 #messenger: ''
 
