update twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ favicon: 'favicon.ico'
 # Online profiles
 #dribbble: 'mydribbble'
 #facebook: ''
-twitter: 'melkyades'
+twitter: '__pocho__'
 #linkedin: 'mylinkedin'
 #instagram: ''
 #pinterest: 'mypinterest'
